--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -9,8 +9,8 @@
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
   --bg-color: #0b59eb;
-  --bg-color-transparent: #e4e8ef80;
-  --font-color: #ffffff;
+  --bg-color-transparent: #e114a080;
+  --font-color: #8dd1f3;
   --btn-bg-color: #ffffff;
   --accent-color: #1fe76f;
   --header-shadow: var(--accent-color) 0px 0px 5px;
