--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -9,10 +9,10 @@
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
   --bg-color: #0b59eb;
-  --bg-color-transparent: #e114a080;
-  --font-color: #8dd1f3;
+  --bg-color-transparent: #0091ff80;
+  --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #1fe76f;
+  --accent-color: #23effe;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
